# Cancer-Detection-Pytorch

./: README.md  pyproject.toml  requirements.txt
src/: nn.ipynb
src/outputs/: best_model.pth  metrics.json
