[project]
name = "cancer-detection-pytorch"
version = "0.1.0"
description = "Breast cancer detection with PyTorch neural network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "jupyterlab",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pandas",
    "torchinfo",
    "ipykernel>=7.2.0",
]
